HelloUltraviolet/Fixtures/RejectedSource/Expressions/RawDerefUnsafeRequirement/Expected.uv
//! Expected diagnostic metadata for the RawDerefUnsafeRequirement rejected-source specimen.

expectedDiagnostic("E-TYP-2103", "rule.16.T-Deref-Raw")
